--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/nsathya1990/build-workflow-webpack/issues"
   },
-  "homepage": "https://github.com/nsathya1990/build-workflow-webpack#readme"
+  "homepage": "https://github.com/nsathya1990/build-workflow-webpack#readme",
+  "devDependencies": {
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
+  }
 }
