--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "homepage": "https://github.com/nsathya1990/build-workflow-webpack#readme",
     "browserslist": "> 1%, last 2 versions",
     "devDependencies": {
-        "@babel/core": "^7.13.8",
-        "@babel/plugin-proposal-class-properties": "^7.13.0",
-        "@babel/preset-env": "^7.13.9",
-        "@babel/preset-react": "^7.12.13",
-        "@babel/preset-stage-2": "^7.8.3",
-        "autoprefixer": "^10.2.4",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^5.1.1",
+        "@babel/core": "^7.6.4",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/preset-env": "^7.6.3",
+        "@babel/preset-react": "^7.6.3",
+        "@babel/preset-stage-2": "^7.0.0",
+        "autoprefixer": "^9.6.5",
+        "babel-loader": "^8.0.6",
+        "css-loader": "^3.2.0",
+        "file-loader": "^4.2.0",
+        "html-webpack-plugin": "^3.2.0",
         "postcss-loader": "^3.0.0",
         "style-loader": "^2.0.0",
+        "url-loader": "^4.1.1",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.9",
         "webpack-dev-server": "^3.8.2"
